# recformer-

./: .gitignore  inference.py  main.py  optimizer.py  pyproject.toml  train_tokenizer.py  trainer.py
config/: train_config.yaml
config/model/: gpt2.yaml  gpt2_8l_768d_no_qknorm.yaml  gpt2_8l_768d_qknorm_rms.yaml  gpt2_8l_768d_qknorm_soft.yaml  recurrent_2l_4r_768d_no_qknorm.yaml  recurrent_2l_4r_768d_qknorm_rms.yaml  recurrent_2l_4r_768d_qknorm_soft.yaml  recurrent_gpt2_comp.yaml  recurrent_gpt2_surrogate.yaml  recurrent_mini.yaml  recurrent_small.yaml
dataset/: fineweb.py  wikitext.py
kernel/: config.py  rms_norm.py  rope.py  swiglu.py
model/: __init__.py  attention.py  block.py  feed_forward.py  norm.py  recurrent_decoder.py  transformer.py  utils.py
scripts/: bench.py  bench_model.py  download_fineweb_edu.py  download_wikitext.py  lm_eval.py  manage_lmdb_archive.py  train_local.sh  train_slurm.py  train_slurm.sh  train_slurm_multi.py
